[gd_scene load_steps=9 format=3 uid="uid://cemcq4l5tcltv"]

[ext_resource type="Script" path="res://scripts/walking_enemy.gd" id="1_3dnwx"]
[ext_resource type="Texture2D" uid="uid://ctd5lq4r82xgp" path="res://assets/enemies/walking_enemy.png" id="1_p5ol1"]
[ext_resource type="PackedScene" uid="uid://bexn610a8mmg" path="res://scenes/hurtbox.tscn" id="3_038ds"]
[ext_resource type="PackedScene" uid="uid://b8ewwpijlarlp" path="res://scenes/hitbox.tscn" id="4_o3fj4"]
[ext_resource type="PackedScene" uid="uid://drv25xhx23l5d" path="res://scenes/statistics.tscn" id="5_7yxh3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d8kcs"]
size = Vector2(10, 10)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ewis0"]
radius = 7.0
height = 18.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rhj3t"]
radius = 7.0
height = 18.0

[node name="WalkingEnemy" type="CharacterBody2D"]
collision_layer = 8
floor_constant_speed = true
floor_snap_length = 2.0
script = ExtResource("1_3dnwx")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_p5ol1")
flip_h = true
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_d8kcs")

[node name="FloorCast" type="RayCast2D" parent="."]
position = Vector2(0, -5)
target_position = Vector2(0, 12)
collide_with_areas = true

[node name="Hurtbox" parent="." instance=ExtResource("3_038ds")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -7)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_ewis0")

[node name="Hitbox" parent="." instance=ExtResource("4_o3fj4")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -7)
rotation = 4.71239
shape = SubResource("CapsuleShape2D_rhj3t")

[node name="Statistics" parent="." instance=ExtResource("5_7yxh3")]

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Statistics" to="." method="_on_statistics_no_health"]
